@/features/Live/components/LiveCardsArea overflow fix

--- a/src/features/Live/components/LiveCardsArea/components/Card/styles.module.scss
+++ b/src/features/Live/components/LiveCardsArea/components/Card/styles.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   font-size: 1rem;
+  height: 15rem;
   justify-content: center;
   position: relative;
   text-align: center;
